--- a/src/components/CatalogIntro/catalog-intro.scss
+++ b/src/components/CatalogIntro/catalog-intro.scss
@@ -45,6 +45,10 @@
             margin-left: 0;
         }
 
+        & > p:first-of-type {
+            margin-top: 2rem;
+        }
+
     }
     
     
