--- a/src/components/NewsItem/news-item.scss
+++ b/src/components/NewsItem/news-item.scss
@@ -77,7 +77,7 @@
                 align-self: flex-start;
                 color: var(--main_em);
                 font-weight: 700;
-                word-break: break-all;
+                text-align: justify;
             }
 
 
@@ -85,7 +85,6 @@
                 margin-top: 10px;
                 margin-bottom: 20px;
                 text-indent: 0rem;
-                word-break: break-all;
 
                 @include respond-to(sm) {
                     margin-top: 5px;
