--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -15,20 +15,20 @@
     & .intro {
 
         & h2 {
-            margin-top: 30px;
+            margin-top: 4rem;
         }
         
         & h4 {
-            margin-top: 30px;
+            margin-top: 3rem;
             text-align: center;
             @include fs_bigger;
         }
 
         & p {
-            margin-top: 0.5rem; 
+            margin-top: 1rem; 
 
             &:first-of-type {
-                margin-top: 30px;
+                margin-top: 2.5rem;
             }
         }
     }
